# VietVoice-TTS-optimize

./: .gitignore  MODEL_EXPLANATION.md  README.md  client.py  pyproject.toml
vietvoicetts/: __main__.py  api.py  server.py
vietvoicetts/core/: audio_processor.py  model.py  model_config.py  tts_engine.py
