[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vietvoicetts"
dynamic = ["version"]
description = "High-quality Text-to-Speech library for Vietnamese"
readme = "README.md"
requires-python = "==3.11.14"
license = {text = "MIT"}
authors = [
    {name = "Darkin72", email = "quanluong2005@gmail.com"},
]
maintainers = [
    {name = "Darkin72", email = "quanluong2005@gmail.com"},
]
dependencies = [
    "numpy>=1.21.0",
    "soundfile>=0.10.3",
    "pydub>=0.25.0",
    "tqdm>=4.64.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "websockets>=11.0",
    "torch",
    "python-multipart",
    "onnxruntime-gpu>=1.23.2",
    "tensorrt>=10.14.1.48.post1",
    "tensorrt-cu12>=10.13.3.9",
    "pycuda>=2026.1",
]

[project.scripts]
vietvoice-tts = "vietvoicetts.cli:main"

[project.urls]
"Homepage" = "https://github.com/nguyenvulebinh/vietvoicetts"
"Bug Reports" = "https://github.com/nguyenvulebinh/vietvoicetts/issues"
"Source" = "https://github.com/nguyenvulebinh/vietvoicetts"
"Documentation" = "https://github.com/nguyenvulebinh/vietvoicetts/blob/main/README.md"

[tool.setuptools.dynamic]
version = {attr = "vietvoicetts.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["vietvoicetts*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 
